--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -19,9 +19,13 @@ depends = ["shell"]
 # Custom env files
 "zsh/env.zsh" = "~/.config/zsh/env.zsh"
 "zsh/aliases.zsh" = "~/.config/zsh/aliases.zsh"
-"zsh/confd" = "~/.config/zsh/conf.d"
-"zsh/functions" = "~/.config/zsh/functions"
-"zsh/scripts" = "~/.config/zsh/scripts"
+
+#"zsh/confd" = "~/.config/zsh/conf.d"
+"zsh/functions/rgf" = "~/.config/zsh/functions/rgf"
+
+"zsh/scripts/compinit.zsh" = "~/.config/zsh/scripts/compinit.zsh"
+"zsh/scripts/prompt_fallback.zsh" = "~/.config/zsh/scripts/prompt_fallback.zsh"
+"zsh/scripts/starship-transient.zsh" = "~/.config/zsh/scripts/starship-transient.zsh"
 # Antidote plugins
 "zsh/zsh_plugins.txt" = "~/.config/zsh/.zsh_plugins.txt"
 
