Add custom Gruvbox Material Light (soft) terminal theme

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -40,6 +40,7 @@ depends = ["shell"]
 
 [ghostty.files]
 "ghostty/config" = "~/.config/ghostty/config"
+"ghostty/themes" = "~/.config/ghostty/themes"
 
 [settings]
 default_target_type = "automatic"
