--- a/zsh/fast-syntax-highlighting/base16_custom.ini
+++ b/zsh/fast-syntax-highlighting/base16_custom.ini
@@ -4,8 +4,8 @@ unknown-token    = 1,bold
 commandseparator = none
 redirection      = none
 here-string-tri  = 14
-here-string-text = 0,bg:11
-here-string-var  = 0,bg:10
+here-string-text = bg:11
+here-string-var  = bg:10
 exec-descriptor  = 9,bold
 comment          = 8
 correct-subtle   = 12
@@ -20,7 +20,7 @@ reserved-word  = 5
 subcommand     = 6
 alias          = 4
 suffix-alias   = 4
-global-alias   = 0,bg:10
+global-alias   = bg:10
 builtin        = 4
 function       = 4
 command        = 4
@@ -31,9 +31,9 @@ double-sq-bracket = 4
 double-paren   = 5
 
 [paths]
-path          = 7
+path          = 15
 pathseparator = 
-path-to-dir   = 7,underline
+path-to-dir   = 15,underline
 globbing      = 6
 globbing-ext  = 6,bold
 
@@ -58,7 +58,7 @@ back-dollar-quoted-argument           = 6
 back-or-dollar-double-quoted-argument = 1
 
 [other]
-variable             = 1
+variable             = 2,bold
 assign               = none
 assign-array-bracket = 5
 history-expansion    = 6,bold
