Switch prompt from Starship -> Powerlevel10k

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -21,4 +21,5 @@
     "gruvboxMaterial.lightContrast": "soft",
     "terminal.integrated.drawBoldTextInBrightColors": false,
     "git.autofetch": true,
+    "gruvboxMaterial.lightPalette": "mix",
 }
