Add btop config and brewfile entry

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,6 +5,7 @@ depends = ["zsh","git","vim","vscode","ghostty"]
 
 [shell.files]
 "shell/bat.config" = "~/.config/bat/config"
+"shell/btop.conf" = "~/.config/btop/btop.conf"
 "shell/fd.ignore" = "~/.config/fd/ignore"
 "shell/lazygit.yml" = "~/.config/lazygit/config.yml"
 "shell/starship" = "~/.config/starship"
