Move Homebrew env init to zshrc to fix issues with atypical shell usage
In Zellij non-login interactive shells are used. These still inherit
regular env variables such as PATH & EDITOR, which are updated in zshenv
or zprofile. However, fpath additions are not inherited, which causes
zsh completions to break in atypical shells.

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -16,6 +16,7 @@ depends = ["shell"]
 [zsh.files]
 # Zsh init files
 "zsh/zshenv" = "~/.zshenv"
+"zsh/zprofile" = "~/.config/zsh/.zprofile"
 "zsh/zshrc" = "~/.config/zsh/.zshrc"
 # Custom env files
 "zsh/aliases.zsh" = "~/.config/zsh/aliases.zsh"
