--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -22,4 +22,5 @@
     "terminal.integrated.drawBoldTextInBrightColors": false,
     "git.autofetch": true,
     "gruvboxMaterial.lightPalette": "mix",
+    "security.promptForLocalFileProtocolHandling": false,
 }
