--- a/shell/lazygit.yml
+++ b/shell/lazygit.yml
@@ -7,3 +7,8 @@ gui:
       - reverse
 os:
   editPreset: 'vscode'
+
+git:
+  pagers:
+    - pager: delta --light --syntax-theme=base16 --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+    - pager: delta --dark --syntax-theme=base16 --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
