Add Zellij and change terminal color scheme to Catppuccin

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -9,6 +9,7 @@ depends = ["zsh","git","vim","vscode","ghostty"]
 "shell/fd.ignore" = "~/.config/fd/ignore"
 "shell/lazygit.yml" = "~/.config/lazygit/config.yml"
 "shell/ripgreprc" = "~/.ripgreprc"
+"shell/zellij/config.kdl" = "~/.config/zellij/config.kdl"
 
 [zsh]
 depends = ["shell"]
