--- a/shell/Brewfile
+++ b/shell/Brewfile
@@ -5,7 +5,9 @@ brew "dotter"
 brew "eza"
 brew "fd"
 brew "fzf"
+brew "htop"
 brew "lazygit"
 brew "ripgrep"
+brew "zellij"
 cask "font-fira-code-nerd-font"
 cask "font-fira-mono-nerd-font"
