--- a/shell/lazygit.yml
+++ b/shell/lazygit.yml
@@ -2,13 +2,36 @@ gui:
   nerdFontsVersion: '3'
   showDivergenceFromBaseBranch: 'arrowAndNumber'
   filterMode: 'fuzzy'
+  # theme:
+  #   selectedLineBgColor:
+  #     - reverse
   theme:
+    activeBorderColor:
+      - '#8aadf4'
+      - bold
+    inactiveBorderColor:
+      - '#a5adcb'
+    optionsTextColor:
+      - '#8aadf4'
     selectedLineBgColor:
-      - reverse
+      - '#363a4f'
+    cherryPickedCommitBgColor:
+      - '#494d64'
+    cherryPickedCommitFgColor:
+      - '#8aadf4'
+    unstagedChangesColor:
+      - '#ed8796'
+    defaultFgColor:
+      - '#cad3f5'
+    searchingActiveBorderColor:
+      - '#eed49f'
+
+  authorColors:
+    '*': '#b7bdf8'
 os:
   editPreset: 'vscode'
 
 git:
   pagers:
-    - pager: delta --light --syntax-theme=base16 --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
-    - pager: delta --dark --syntax-theme=base16 --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+    - pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+    - pager: delta --light --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
