--- a/shell/btop/btop.conf
+++ b/shell/btop/btop.conf
@@ -2,7 +2,7 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "TTY"
+color_theme = "catppuccin_macchiato"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = false
@@ -50,7 +50,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu proc"
+shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
@@ -63,7 +63,7 @@ proc_sorting = "command"
 proc_reversed = false
 
 #* Show processes as a tree.
-proc_tree = true
+proc_tree = false
 
 #* Use the cpu graph colors in the process list.
 proc_colors = true
@@ -110,7 +110,7 @@ cpu_invert_lower = true
 cpu_single_graph = false
 
 #* Show cpu box at bottom of screen instead of top.
-cpu_bottom = true
+cpu_bottom = false
 
 #* Shows the system uptime in the CPU box.
 show_uptime = true
