Swap helix for evil-helix for vim keybinds

--- a/shell/Brewfile
+++ b/shell/Brewfile
@@ -2,10 +2,10 @@ brew "antidote"
 brew "bat"
 brew "btop"
 brew "dotter"
+brew "evil-helix"
 brew "eza"
 brew "fd"
 brew "fzf"
-brew "helix"
 brew "htop"
 brew "lazygit"
 brew "ripgrep"
