--- a/shell/helix/config.toml
+++ b/shell/helix/config.toml
@@ -1,6 +1,7 @@
 theme = "catppuccin_macchiato"
 
 [editor]
+evil = true # Use traditional vim keybinds 
 line-number = "relative"
 color-modes = true
 text-width = 120
@@ -8,5 +9,5 @@ trim-trailing-whitespace = true
 
 [editor.indent-guides]
 render = true
-character = "┆" # Some characters that work well: "▏", "╎", "┆", "┊", "⸽"
+character = "▏" # Some characters that work well: "▏", "╎", "┆", "┊", "⸽"
 skip-levels = 1
